--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="next_button">Next</string>
     <string name="incorrect_toast">Incorrect</string>
     <string name="previous_button">Previous</string>
+    <string name="score_message">Your score is %1$d out of %2$d</string>
 </resources>
